[package]
name = "renify"
version = "0.0.7"
edition = "2021"
description = "A simple cli tool for batch renaming files and folders, written in Rust."
repository = "https://github.com/jamjamjon/renify"
authors = ["Jamjamjon <jamjamjon.usls@gmail.com>"]
license = "MIT"


[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
walkdir = "2"
rand = "0.8.5"
chrono = "0.4.30"
uuid = { version = "1.4.1", features = ["v4"]}
indicatif = { version = "0.17.6"}
dirs = "5.0.1"
anyhow = "1.0.75"
dialoguer = "0.11.0"
console = "0.15.8"
