[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "renify"
dynamic = ["version"]
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = [
  "automation",
  "rename",
  "cli",
  "rust"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Repository = "https://github.com/jamjamjon/renify"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
module-name = "renify"
python-source = "python"
strip = true
exclude = []
include = []
