[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "renify"
dynamic = ["version"]
requires-python = ">=3.7"
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
  "automation",
  "rename",
  "cli",
  "rust",
  "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Repository = "https://github.com/jamjamjon/renify"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
module-name = "renify"
python-source = "python"
strip = true
exclude = []
include = [
    "rust-toolchain.toml"
]
